fix(Header): Fix search bar size. Fix account menu tooltip z-index

--- a/src/sass/modules/headers.scss
+++ b/src/sass/modules/headers.scss
@@ -94,6 +94,7 @@ body > header,
 				border: 1px solid $grey-lighter;
 				padding: 0 15px 8px 15px;
 				box-sizing: border-box;
+				z-index: 1;
 				@include border-radius(6px);
 
 				.fa-caret-up {
@@ -101,7 +102,7 @@ body > header,
 					top: -14px;
 					color: white;
 					font-size: 1.25em;
-					left: 174px;
+					left: 171px;
 				}
 
 				a {
@@ -265,7 +266,7 @@ body > header,
 		@extend .grid-25;
 		@extend .tablet-grid-25;
 		@extend .hide-on-mobile;
-		padding: 13px 15px 12px;
+		padding: 19px 15px 12px;
 		background-color: rgba(255, 255, 255, 0.1);
 		position: relative;
 
@@ -303,7 +304,7 @@ body > header,
 			font-size: 1.375em;
 			position: absolute;
 			right: 15px;
-			top: 14px;
+			top: 20px;
 			height: 53px;
 			width: 55px;
 			margin: 0;
